# reflexion

./: .gitignore  CLAUDE.md  README.md  audio_server.py  pyproject.toml  requirements.txt
_archived/: pyproject.toml
_archived/clinic/: __init__.py
_archived/doc/: pipeline_report_cn.md
_archived/schemas/: home-risk-output.schema.json  identity-link.schema.json  session-record.schema.json
_archived/verification/: README.md  config.py  download_google_drive_folder.py  download_talkbank.py  metrics.py  (+6 more)
admin-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
caregiver-app/: .env.example  .gitignore  README.md  app.json  eas.json  package-lock.json  package.json
caregiver-server/: .env.example  LEGACY_V1_ADAPTER.md  README.md  package-lock.json  package.json
clinic/: README.md
doc/: pipeline_report_en.md  privacy_protection_cn.md  privacy_protection_en.md
docs/: ARCHITECTURE-AND-API.md  Reflexion_Project_Plan_TechLead.docx  phase6-longitudinal-design.md  reflexion-implementation-baseline.md
mirror-app/: .env.example  .env.server.example  .gitignore  QWEN_RELAY.md  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
reflexion-server/: .gitignore  LEGACY_V1_ADAPTER.md  package-lock.json  package.json
schemas/: feature-snapshot.schema.json
templates/: dataset_manifest.yaml  model_release_checklist.md  pilot_site_readiness_checklist.md  requirements_traceability.csv  risk_register.csv
verification/: build_adresso_manifest.py  media.py  model_routing.py  talkbank_verification_data.py
(+767 files in other folders)
