[project]
name = "reflexion-clinic-demo"
version = "0.1.0"
description = "Provider-mesh clinic diagnostic-adjunct video demo for Reflexion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "scikit-image>=0.24.0",
  "uvicorn>=0.30.0",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["clinic/tests"]
